syntax = "proto3";

package order;

option go_package = "https://gitlab.ozon.dev/maksim_latypov_01/homework-3/pkg/api/proto/order/v1";

service OrderService {
  rpc AcceptOrder(OrderRequest) returns (OrderResponse);
  rpc ReturnOrder(OrderRequest) returns (OrderResponse);
  rpc IssueOrder(OrderRequest) returns (OrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListResponse);
  rpc AcceptReturn(OrderRequest) returns (OrderResponse);
  rpc ListReturns(ListReturnsRequest) returns (ListResponse);
}

message OrderRequest {
  int32 order_id = 1;
  int32 user_id = 2;
  double weight = 3;
  string packaging_type = 4;
}

message ListOrdersRequest {
  int32 user_id = 1;
  int32 last_n = 2;
}

message ListReturnsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message OrderInfo {
  int32 order_id = 1;
  int32 user_id = 2;
  string status = 3;
  double weight = 4;
  string packaging_type = 5;
  string deadline = 6;
}

message OrderResponse {
  string status = 1;
}

message ListResponse {
  repeated OrderInfo orders = 1;
}